--- a/atsiosUITests/Info.plist
+++ b/atsiosUITests/Info.plist
@@ -16,7 +16,13 @@
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFCustomPort</key>
+	<string>$(CUSTOM_PORT)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CustomPort</key>
+	<string>$(CUSTOM_PORT)</string>
 </dict>
 </plist>
