--- a/atsios.xcodeproj/xcshareddata/xcschemes/atsios.xcscheme
+++ b/atsios.xcodeproj/xcshareddata/xcschemes/atsios.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "047BFA7A22F178D800BB2E25"
-               BuildableName = "atsiosUITests.xctest"
-               BlueprintName = "atsiosUITests"
+               BuildableName = "atsDriver.xctest"
+               BlueprintName = "atsDriver"
                ReferencedContainer = "container:atsios.xcodeproj">
             </BuildableReference>
          </TestableReference>
