--- a/atsDriver/Settings.plist
+++ b/atsDriver/Settings.plist
@@ -22,5 +22,7 @@
 	<string></string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFComputerResolution</key>
+	<string></string>
 </dict>
 </plist>
