get right size of screen and apply ratio

--- a/atsDriver/Settings.plist
+++ b/atsDriver/Settings.plist
@@ -23,6 +23,6 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CFComputerResolution</key>
-	<string></string>
+	<string>1920x1080</string>
 </dict>
 </plist>
